Added accordion for user graphs

--- a/templates/query10.html
+++ b/templates/query10.html
@@ -9,50 +9,180 @@
             <h1>Dominant Users</h1>
     </div>
     <div class="row">
-        <div class="column" style="float: left; width: 32%; margin-top: 70px; margin-left: 250px;">
+      <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 60px;" open>
+        <summary>3-way Hate-Offensive Classification</summary>
+        <p>
+        <!-- <div class="column" style="float: left; width: 32%; margin-top: 70px; margin-left: 250px;"> -->
+        <div class="column">
           <div class="card" id="about">
             <div id='chart0' class='chart'”></div>
             <!--<h2>Bar Plot of users with max number of tweets in  'true' category</h2>-->
             <p class="content">Bar Plot of users with max number of tweets in  'true' category </p>
           </div>
         </div>
-        <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;" >
+        <div class="column" style="margin-top: 10px;">
           <div class="card" id="background">
             <div id='chart1' class='chart'”></div>
             <!--<h2>About</h2>-->
             <p class="content">Bar Plot of users with max number of tweets in'satire' category </p>
           </div> 
         </div>
-        <div class="column" style="float: left; width: 32%; margin-top: 70px; margin-left: 250px;">
+        <div class="column" style="margin-top: 10px;">
             <div class="card" id="about">
               <div id='chart2' class='chart'”></div>
               
               <p class="content">Bar Plot of users with max number of tweets in 'misleading' category</p>
             </div>
         </div>
-          <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;">
+        </p> 
+      </details>
+
+      <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 60px;" open>
+        <summary>2-way Fake Classification</summary>
+        <p>
+        <!-- <div class="column" style="float: left; width: 32%; margin-top: 70px; margin-left: 250px;"> -->
+        <div class="column">
+          <div class="card" id="about">
+            <div id='chart0' class='chart'”></div>
+            <!--<h2>Bar Plot of users with max number of tweets in  'true' category</h2>-->
+            <p class="content">Bar Plot of users with max number of tweets in  'true' category </p>
+          </div>
+        </div>
+        <div class="column" style="margin-top: 10px;">
+          <div class="card" id="background">
+            <div id='chart1' class='chart'”></div>
+            <!--<h2>About</h2>-->
+            <p class="content">Bar Plot of users with max number of tweets in'satire' category </p>
+          </div> 
+        </div>
+        </p> 
+      </details>
+
+      <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 60px;" open>
+        <summary>6-way Fake Classification</summary>
+        <p>
+        <!-- <div class="column" style="float: left; width: 32%; margin-top: 70px; margin-left: 250px;"> -->
+        <div class="column">
+          <div class="card" id="about">
+            <div id='chart0' class='chart'”></div>
+            <!--<h2>Bar Plot of users with max number of tweets in  'true' category</h2>-->
+            <p class="content">Bar Plot of users with max number of tweets in  'true' category </p>
+          </div>
+        </div>
+        <div class="column" style="margin-top: 10px;">
+          <div class="card" id="background">
+            <div id='chart1' class='chart'”></div>
+            <!--<h2>About</h2>-->
+            <p class="content">Bar Plot of users with max number of tweets in'satire' category </p>
+          </div> 
+        </div>
+        <div class="column" style="margin-top: 10px;">
+            <div class="card" id="about">
+              <div id='chart2' class='chart'”></div>
+              
+              <p class="content">Bar Plot of users with max number of tweets in 'misleading' category</p>
+            </div>
+        </div>
+          <div class="column" style="margin-top: 10px;">
             <div class="card" id="background">
               <div id='chart3' class='chart'”></div>
               
               <p class="content">Bar Plot of users with max number of tweets in'false' category</p>
             </div> 
           </div>
-          <div class="column" style="float: left; width: 32%; margin-top: 70px; margin-left: 250px;">
+          <div class="column" style="margin-top: 10px;">
             <div class="card" id="about">
               <div id='chart4' class='chart'”></div>
               
               <p class="content">Bar Plot of users with max number of tweets in'imposter' category</p>
             </div>
         </div>
-          <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;">
+          <div class="column" style="margin-top: 10px;">
             <div class="card" id="background">
               <div id='chart5' class='chart'”></div>
               
               <p class="content">Bar Plot of users with max number of tweets in'manipulated' category</p>
             </div> 
           </div>
-          
-          
+        </p> 
+      </details>
+
+      <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 60px;" open>
+        <summary>3-way Hate Classification</summary>
+        <p>
+        <!-- <div class="column" style="float: left; width: 32%; margin-top: 70px; margin-left: 250px;"> -->
+        <div class="column">
+          <div class="card" id="about">
+            <div id='chart0' class='chart'”></div>
+            <!--<h2>Bar Plot of users with max number of tweets in  'true' category</h2>-->
+            <p class="content">Bar Plot of users with max number of tweets in  'true' category </p>
+          </div>
+        </div>
+        <div class="column" style="margin-top: 10px;">
+          <div class="card" id="background">
+            <div id='chart1' class='chart'”></div>
+            <!--<h2>About</h2>-->
+            <p class="content">Bar Plot of users with max number of tweets in'satire' category </p>
+          </div> 
+        </div>
+        <div class="column" style="margin-top: 10px;">
+            <div class="card" id="about">
+              <div id='chart2' class='chart'”></div>
+              
+              <p class="content">Bar Plot of users with max number of tweets in 'misleading' category</p>
+            </div>
+        </div>
+        </p> 
+      </details>
+
+      <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 60px;" open>
+        <summary>6-way Hate Classification</summary>
+        <p>
+        <!-- <div class="column" style="float: left; width: 32%; margin-top: 70px; margin-left: 250px;"> -->
+        <div class="column">
+          <div class="card" id="about">
+            <div id='chart0' class='chart'”></div>
+            <!--<h2>Bar Plot of users with max number of tweets in  'true' category</h2>-->
+            <p class="content">Bar Plot of users with max number of tweets in  'true' category </p>
+          </div>
+        </div>
+        <div class="column" style="margin-top: 10px;">
+          <div class="card" id="background">
+            <div id='chart1' class='chart'”></div>
+            <!--<h2>About</h2>-->
+            <p class="content">Bar Plot of users with max number of tweets in'satire' category </p>
+          </div> 
+        </div>
+        <div class="column" style="margin-top: 10px;">
+            <div class="card" id="about">
+              <div id='chart2' class='chart'”></div>
+              
+              <p class="content">Bar Plot of users with max number of tweets in 'misleading' category</p>
+            </div>
+        </div>
+          <div class="column" style="margin-top: 10px;">
+            <div class="card" id="background">
+              <div id='chart3' class='chart'”></div>
+              
+              <p class="content">Bar Plot of users with max number of tweets in'false' category</p>
+            </div> 
+          </div>
+          <div class="column" style="margin-top: 10px;">
+            <div class="card" id="about">
+              <div id='chart4' class='chart'”></div>
+              
+              <p class="content">Bar Plot of users with max number of tweets in'imposter' category</p>
+            </div>
+        </div>
+          <div class="column" style="margin-top: 10px;">
+            <div class="card" id="background">
+              <div id='chart5' class='chart'”></div>
+              
+              <p class="content">Bar Plot of users with max number of tweets in'manipulated' category</p>
+            </div> 
+          </div>
+        </p> 
+      </details>    
     </div>
 </div>
 <script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
