--- a/templates/index.html
+++ b/templates/index.html
@@ -9,28 +9,50 @@
             <h1>Categorical Wordclouds</h1>
     </div>
     <div class="row">
-        <div class="column" style="float: left; width: 32%; margin-top: 70px; margin-left: 250px;">
+      <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 60px;" open>
+        <summary>3-way Hate-Offensive Classification</summary>
+        <p>
+        <!-- <div class="column" style="float: left; width: 32%; margin-top: 70px; margin-left: 250px;"> -->
+        <div class="column">
           <div class="card" id="about">
             <img src={{ url[0]}} alt="Avatar" class="card-im">
             <h2>Hate Tweets</h2>
             <p class="content">Using 2-way classification, we obtain a wordcloud for hate tweets </p>
           </div>
         </div>
-        <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;" >
+        </p>
+        </details>
+        <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 60px;" open>
+        <summary>3-way Hate-Offensive Classification</summary>
+        <p>
+        <!-- <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;" > -->
+        <div class="column">
           <div class="card" id="background">
             <img src={{ url[1]}} alt="Avatar" class="card-im">
             <h2>Offensive Tweets</h2>
             <p class="content"> Using 2-way classification, we obtain a wordcloud for offensive tweets</p>
           </div> 
         </div>
-        <div class="column" style="float: left; width: 32%; margin-top: 70px; margin-left: 250px;">
+        </p>
+        </details>
+        <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 60px;" open>
+        <summary>3-way Hate-Offensive Classification</summary>
+        <p>
+        <!-- <div class="column" style="float: left; width: 32%; margin-top: 70px; margin-left: 250px;"> -->
+        <div class="column">
             <div class="card" id="about">
               <img src={{ url[2]}} alt="Avatar" class="card-im">
               <h2>Neither Hate nor Offensive Tweets</h2>
               <p class="content">Using 2-way classification, we obtain a wordcloud for tweets that are neither hate nor offensive </p>
             </div>
           </div>
-          <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;">
+          </p>
+        </details>
+        <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 60px;" open>
+        <summary>3-way Hate-Offensive Classification</summary>
+        <p>
+          <!-- <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;"> -->
+        <div class="column">
             <div class="card" id="background">
               <img src={{ url[3]}} alt="Avatar" class="card-im">
               <h2>True Tweets</h2>
@@ -38,7 +60,13 @@
             </div> 
           </div>
         </div>
-        <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 250px;">
+        </p>
+        </details>
+        <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 60px;" open>
+        <summary>3-way Hate-Offensive Classification</summary>
+        <p>
+        <!-- <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 250px;"> -->
+        <div class="column">
           <div class="card" id="background">
             <img src={{ url[4]}} alt="Avatar" class="card-im">
             <h2>False Tweets</h2>
@@ -46,7 +74,13 @@
           </div> 
         </div>
       </div>
-      <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;">
+      </p>
+        </details>
+        <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 60px;" open>
+        <summary>3-way Hate-Offensive Classification</summary>
+        <p>
+      <!-- <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;"> -->
+        <div class="column">
         <div class="card" id="background">
           <img src={{ url[5]}} alt="Avatar" class="card-im">
           <h2>Satire Tweets</h2>
@@ -54,7 +88,13 @@
         </div> 
       </div>
     </div>
-    <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 250px;">
+    </p>
+        </details>
+        <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 60px;" open>
+        <summary>3-way Hate-Offensive Classification</summary>
+        <p>
+    <!-- <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 250px;"> -->
+        <div class="column">
       <div class="card" id="background">
         <img src={{ url[6]}} alt="Avatar" class="card-im">
         <h2>Misleading Tweets</h2>
@@ -62,7 +102,13 @@
       </div> 
     </div>
   </div>
-  <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;">
+  </p>
+        </details>
+        <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 60px;" open>
+        <summary>3-way Hate-Offensive Classification</summary>
+        <p>
+  <!-- <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;"> -->
+        <div class="column">
     <div class="card" id="background">
       <img src={{ url[7]}} alt="Avatar" class="card-im">
       <h2>Imposter Tweets</h2>
