Updated accordion for user graphs

--- a/templates/query10.html
+++ b/templates/query10.html
@@ -37,7 +37,7 @@
         </p> 
       </details>
 
-      <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 60px;" open>
+      <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 60px;">
         <summary>2-way Fake Classification</summary>
         <p>
         <!-- <div class="column" style="float: left; width: 32%; margin-top: 70px; margin-left: 250px;"> -->
@@ -58,7 +58,7 @@
         </p> 
       </details>
 
-      <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 60px;" open>
+      <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 60px;">
         <summary>6-way Fake Classification</summary>
         <p>
         <!-- <div class="column" style="float: left; width: 32%; margin-top: 70px; margin-left: 250px;"> -->
@@ -107,7 +107,7 @@
         </p> 
       </details>
 
-      <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 60px;" open>
+      <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 60px;">
         <summary>3-way Hate Classification</summary>
         <p>
         <!-- <div class="column" style="float: left; width: 32%; margin-top: 70px; margin-left: 250px;"> -->
@@ -135,7 +135,7 @@
         </p> 
       </details>
 
-      <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 60px;" open>
+      <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 60px;">
         <summary>6-way Hate Classification</summary>
         <p>
         <!-- <div class="column" style="float: left; width: 32%; margin-top: 70px; margin-left: 250px;"> -->
@@ -204,4 +204,6 @@
   
 
 </script>
+<script src="{{ url_for('static', filename='js/accordion.js') }}"></script>
+
 {% endblock %}
