--- a/static/styles/accordion.scss.css
+++ b/static/styles/accordion.scss.css
@@ -22,6 +22,7 @@ AUTHOR: https://codepen.io/nicolasjengler
   --color-summary-2-highlight: #B4B3FF;
   --color-summary-3: #FFF0F3;
   --color-summary-3-highlight: #FFB3C0;
+  --color-summary-4-highlight: #4cafff4d;
   --font-ibm-plex-sans: 'IBM Plex Sans', sans-serif; }
 
 details {
@@ -41,6 +42,10 @@ details {
     --highlight: var(--color-summary-2-highlight) ;
     background: var(--color-summary-2);
     border-left-color: var(--color-summary-2-highlight); }
+  details.info-tweet {
+    --highlight: var(--color-summary-2-highlight) ;
+    background: var(--color-summary-2);
+    border-left-color: var(--color-summary-4-highlight); }
   details.alert {
     --highlight: var(--color-summary-3-highlight) ;
     background: var(--color-summary-3);
