--- a/templates/inputtext.html
+++ b/templates/inputtext.html
@@ -15,39 +15,61 @@
             <button type="submit" class="btn-input">Submit</button>
         </form>
     </div>
-    <!-- <div class="column" style="float: left; width: 60%; margin-top: 40px; margin-left: 400px;">
-        <form method="POST">
-            <input name="text">
-            <input type="submit">
-        </form>
-    </div> -->
-    <!-- <div class="column" style="float: left; width: 80%; margin-top: 70px; margin-left: 400px;">
-        <h2>***** ***** *****</h2>
-    </div> -->
-    <div class="column" style="float: left; width: 62%; margin-top: 70px; margin-left: 300px; background: rgba(76, 175, 255, 0.3)">
+    <details class="info-tweet" style="float: left; width: 65%; margin-left: 300px; margin-top: 40px; background: rgba(76, 175, 255, 0.3)">
+    <summary>{{tweet}}</summary>
+    </details>
+    <!-- <div class="column" style="float: left; width: 62%; margin-top: 70px; margin-left: 300px; background: rgba(76, 175, 255, 0.3)">
         <p style="padding: 15px;">{{tweet}}</p>
-    </div>
+    </div> -->
+    <!-- <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 40px;">
+    <summary>CLASSIFICATION</summary> -->
     <div class="column" style="float: left; width: 80%; margin-top: 70px; margin-left: 350px;">
         <h2>CLASSIFICATION</h2>
     </div>
-    <div class="column" style="float: left; width: 80%; margin-top: 40px; margin-left: 350px;">
-        <h3>HSOL: hate | offensive | none</h3>
-        <h4>{{names[0]}}</h4>
-    </div>
-    <div class="column" style="float: left; width: 80%; margin-top: 40px; margin-left: 350px;">
-        <h3>Fakeddit 2-way: true | false</h3>
-        <h4>{{names[1]}}</h4>
-    </div>
-    <div class="column" style="float: left; width: 80%; margin-top: 40px; margin-left: 350px;">
-        <h3>Fakeddit 6-way: true | satire | misleading | false | imposter | manipulated</h3>
-        <h4>{{names[2]}}</h4>
-    </div>
-    <div class="column" style="float: left; width: 80%; margin-top: 40px; margin-left: 350px;">
-        <h3>Implicit 3-way: explicit | implicit | not hate</h3>
-        <h4>{{names[3]}}</h4>
-    </div>
-    <div class="column" style="float: left; width: 80%; margin-top: 40px; margin-left: 350px;">
-        <h3>Implicit 6-way: incitement | inferiority | irony | stereotypical | threatening | white grievance</h3>
-        <h4>{{names[4]}}</h4>
-    </div>
+    </details>
+    <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 40px;">
+    <summary>HSOL: hate | offensive | none</summary>
+        <p>
+        <div class="column" style="float: left; width: 80%; margin-top: 40px; margin-left: 350px;">
+            <!-- <h3>HSOL: hate | offensive | none</h3> -->
+            <h4>{{names[0]}}</h4>
+        </div>
+        </p>
+    </details>
+    <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 40px;">
+    <summary>Fakeddit 2-way: true | false</summary>
+        <p>
+        <div class="column" style="float: left; width: 80%; margin-top: 40px; margin-left: 350px;">
+            <!-- <h3>Fakeddit 2-way: true | false</h3> -->
+            <h4>{{names[1]}}</h4>
+        </div>
+        </p>
+    </details>
+    <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 40px;">
+    <summary>Fakeddit 6-way: true | satire | misleading | false | imposter | manipulated</summary>
+        <p>
+        <div class="column" style="float: left; width: 80%; margin-top: 40px; margin-left: 350px;">
+            <!-- <h3>Fakeddit 6-way: true | satire | misleading | false | imposter | manipulated</h3> -->
+            <h4>{{names[2]}}</h4>
+        </div>
+        </p>
+    </details>
+    <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 40px;">
+    <summary>Implicit 3-way: explicit | implicit | not hate</summary>
+        <p>
+        <div class="column" style="float: left; width: 80%; margin-top: 40px; margin-left: 350px;">
+            <!-- <h3>Implicit 3-way: explicit | implicit | not hate</h3> -->
+            <h4>{{names[3]}}</h4>
+        </div>
+        </p>
+    </details>
+    <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 40px;">
+    <summary>Implicit 6-way: incitement | inferiority | irony | stereotypical | threatening | white grievance</summary>
+        <p>
+        <div class="column" style="float: left; width: 80%; margin-top: 40px; margin-left: 350px;">
+            <!-- <h3>Implicit 6-way: incitement | inferiority | irony | stereotypical | threatening | white grievance</h3> -->
+            <h4>{{names[4]}}</h4>
+        </div>
+        </p>
+    </details>
 {% endblock %}
