--- a/templates/network.html
+++ b/templates/network.html
@@ -27,7 +27,7 @@
           </ul> -->
         </li>
         <li class="services">
-          <a href="{{ url_for('get_background') }}"><i class="fa fa-info" aria-hidden="true"></i>Background</a>
+          <a href="{{ url_for('get_background') }}"><i class="fa fa-info" aria-hidden="true"></i>About</a>
         </li>
         <li class="services">
           <a href="/"><i class="fa fa-line-chart" aria-hidden="true"></i>Visualize</a>
