--- a/templates/bargraph2.html
+++ b/templates/bargraph2.html
@@ -22,35 +22,59 @@
             <h1>Dominant Categories</h1>
     </div>
     <div class="row">
-        <div class="column" style="float: left; width: 32%; margin-top: 70px; margin-left: 250px;">
+      <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 50px;" open>
+        <summary>2-way Fake Classification</summary>
+        <p>
+        <!-- <div class="column" style="float: left; width: 60%; margin-top: 70px; margin-left: 350px;"> -->
+        <div class="column" style="float: left; width: 90%; margin-top: 70px; margin-left: 60px;">
           <div class="card" id="about">
             <div id='chart1' class='chart'”></div>
             <h2>2-way Fake Classification</h2>
             <p class="content">Fake | Not Fake </p>
           </div>
         </div>
-        <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;" >
+        </p>
+    </details>
+
+    <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 40px;">
+        <summary>6-way Fake Classification</summary>
+        <p>
+          <div class="column" style="float:left; width: 90%; margin-top: 70px; margin-left: 50px;" >
           <div class="card" id="background">
             <div id='chart2' class='chart'”></div>
             <h2>6-way Fake Classification</h2>
             <p class="content"> true | satire | misleading | false | imposter | manipulated</p>
           </div> 
         </div>
-        <div class="column" style="float: left; width: 32%; margin-top: 70px; margin-left: 250px;">
+        </p>
+    </details>
+
+    <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 40px;">
+        <summary>3-way Hate Classification</summary>
+        <p>
+          <div class="column" style="float: left; width: 90%; margin-top: 70px; margin-left: 50px;">
             <div class="card" id="about">
               <div id='chart3' class='chart'”></div>
               <h2>3-way Hate Classification</h2>
               <p class="content">Inplicit | Explicit | Not Hate </p>
             </div>
           </div>
-          <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;">
+        </p>
+    </details>
+
+    <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 40px;">
+        <summary>6-way Hate Classification</summary>
+        <p>
+        <div class="column" style="float:left; width: 90%; margin-top: 70px; margin-left: 50px;">
             <div class="card" id="background">
               <div id='chart4' class='chart'”></div>
               <h2>6-way Hate Classification</h2>
               <p class="content"> incitement | inferiority | irony | stereotypical | threatening | white grievance</p>
             </div> 
-          </div>
-        </div>
+          </div> 
+        </p>
+    </details>
+</div>
 <script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
 <script type='text/javascript'>
   var graphs1 = {{graphJSON[0] | safe}};
@@ -63,4 +87,5 @@
   Plotly.plot('chart3',graphs3,{});
   Plotly.plot('chart4',graphs4,{});
 </script>
+<script src="{{ url_for('static', filename='js/accordion.js') }}"></script>
 {% endblock %}
