--- a/templates/geoheatmap.html
+++ b/templates/geoheatmap.html
@@ -10,12 +10,28 @@
         <summary>3-way Hate-Offensive Classification</summary>
         <p>
         <!-- <div class="column" style="float: left; width: 60%; margin-top: 70px; margin-left: 350px;"> -->
-        <div class="column">
+        <div class="column" style="margin-top: 10px;width: 90%;">
             <div class="card" id="about">
                 <div id='chart1' class='chart1'”></div>
                 <!-- <img src={{ url[0] }} alt="Avatar" class="card-im"> -->
                 <h2>3-way Hate-Offensive Classification</h2>
-                <p class="content">hate | offensive | none</p>
+                <p class="content"><strong>hate</strong> | offensive | none</p>
+            </div>
+        </div>
+        <div class="column" style="margin-top: 10px;width: 90%;">
+            <div class="card" id="about">
+                <div id='chart2' class='chart2'”></div>
+                <!-- <img src={{ url[0] }} alt="Avatar" class="card-im"> -->
+                <h2>3-way Hate-Offensive Classification</h2>
+                <p class="content">hate | <strong>offensive</strong> | none</p>
+            </div>
+        </div>
+        <div class="column" style="margin-top: 10px;width: 90%;">
+            <div class="card" id="about">
+                <div id='chart3' class='chart3'”></div>
+                <!-- <img src={{ url[0] }} alt="Avatar" class="card-im"> -->
+                <h2>3-way Hate-Offensive Classification</h2>
+                <p class="content">hate | offensive | <strong>none</strong></p>
             </div>
         </div>
         </p>
@@ -24,12 +40,21 @@
         <summary>2-way Fake Classification</summary>
         <p>
         <!-- <div class="column" style="float: left; width: 60%; margin-top: 70px; margin-left: 350px;"> -->
-        <div class="column">
-        <div class="card" id="background">
-            <div id='chart2' class='chart2'”></div>
-            <!-- <img src={{ url[1] }} alt="Avatar" class="card-im"> -->
-            <h2>2-way Fake Classification</h2>
-            <p class="content">fake | not fake</p>
+        <div class="column" style="margin-top: 10px;width: 90%;">
+            <div class="card" id="background">
+                <div id='chart4' class='chart4'”></div>
+                <!-- <img src={{ url[1] }} alt="Avatar" class="card-im"> -->
+                <h2>2-way Fake Classification</h2>
+                <p class="content"><strong>fake</strong> | not fake</p>
+            </div>
+        </div>
+        <div class="column" style="margin-top: 10px;width: 90%;">
+            <div class="card" id="background">
+                <div id='chart5' class='chart5'”></div>
+                <!-- <img src={{ url[1] }} alt="Avatar" class="card-im"> -->
+                <h2>2-way Fake Classification</h2>
+                <p class="content">fake | <strong>not fake</strong></p>
+            </div>
         </div>
         </p>
     </details>
@@ -37,12 +62,53 @@
         <summary>6-way Fake Classification</summary>
         <p>
         <!-- <div class="column" style="float: left; width: 60%; margin-top: 70px; margin-left: 350px;"> -->
-        <div class="column">
-        <div class="card" id="about">
-            <div id='chart3' class='chart3'”></div>
-            <!-- <img src={{ url[2] }} alt="Avatar" class="card-im"> -->
-            <h2>6-way Fake Classification</h2>
-            <p class="content">true | satire | misleading | false | imposter | manipulated</p>
+        <div class="column" style="margin-top: 10px;width: 90%;">
+            <div class="card" id="about">
+                <div id='chart6' class='chart6'”></div>
+                <!-- <img src={{ url[2] }} alt="Avatar" class="card-im"> -->
+                <h2>6-way Fake Classification</h2>
+                <p class="content"><strong>true</strong> | satire | misleading | false | imposter | manipulated</p>
+            </div>
+        </div>
+        <div class="column" style="margin-top: 10px;width: 90%;">
+            <div class="card" id="about">
+                <div id='chart7' class='chart7'”></div>
+                <!-- <img src={{ url[2] }} alt="Avatar" class="card-im"> -->
+                <h2>6-way Fake Classification</h2>
+                <p class="content">true | <strong>satire</strong> | misleading | false | imposter | manipulated</p>
+            </div>
+        </div>
+        <div class="column" style="margin-top: 10px;width: 90%;">
+            <div class="card" id="about">
+                <div id='chart8' class='chart8'”></div>
+                <!-- <img src={{ url[2] }} alt="Avatar" class="card-im"> -->
+                <h2>6-way Fake Classification</h2>
+                <p class="content">true | satire | <strong>misleading</strong> | false | imposter | manipulated</p>
+            </div>
+        </div>
+        <div class="column" style="margin-top: 10px;width: 90%;">
+            <div class="card" id="about">
+                <div id='chart9' class='chart9'”></div>
+                <!-- <img src={{ url[2] }} alt="Avatar" class="card-im"> -->
+                <h2>6-way Fake Classification</h2>
+                <p class="content">true | satire | misleading | <strong>false</strong> | imposter | manipulated</p>
+            </div>
+        </div>
+        <div class="column" style="margin-top: 10px;width: 90%;">
+            <div class="card" id="about">
+                <div id='chart10' class='chart10'”></div>
+                <!-- <img src={{ url[2] }} alt="Avatar" class="card-im"> -->
+                <h2>6-way Fake Classification</h2>
+                <p class="content">true | satire | misleading | false | <strong>imposter</strong> | manipulated</p>
+            </div>
+        </div>
+        <div class="column" style="margin-top: 10px;width: 90%;">
+            <div class="card" id="about">
+                <div id='chart11' class='chart11'”></div>
+                <!-- <img src={{ url[2] }} alt="Avatar" class="card-im"> -->
+                <h2>6-way Fake Classification</h2>
+                <p class="content">true | satire | misleading | false | imposter | <strong>manipulated</strong></p>
+            </div>
         </div>
         </p>
     </details>
@@ -50,27 +116,90 @@
         <summary>3-way Hate Classification</summary>
         <p>
         <!-- <div class="column" style="float: left; width: 60%; margin-top: 70px; margin-left: 350px;"> -->
-        <div class="column">
-        <div class="card" id="background">
-            <div id='chart4' class='chart4'”></div>
-            <!-- <img src={{ url[3] }} alt="Avatar" class="card-im"> -->
-            <h2>3-way Hate Classification</h2>
-            <p class="content">implicit | explicit | not hate</p>
-        </div> 
+        <div class="column" style="margin-top: 10px;width: 90%;">
+            <div class="card" id="background">
+                <div id='chart12' class='chart12'”></div>
+                <!-- <img src={{ url[3] }} alt="Avatar" class="card-im"> -->
+                <h2>3-way Hate Classification</h2>
+                <p class="content"><strong>implicit</strong> | explicit | not hate</p>
+            </div> 
+        </div>
+        <div class="column" style="margin-top: 10px;width: 90%;">
+            <div class="card" id="background">
+                <div id='chart13' class='chart13'”></div>
+                <!-- <img src={{ url[3] }} alt="Avatar" class="card-im"> -->
+                <h2>3-way Hate Classification</h2>
+                <p class="content">implicit | <strong>explicit</strong> | not hate</p>
+            </div> 
+        </div>
+        <div class="column" style="margin-top: 10px;width: 90%;">
+            <div class="card" id="background">
+                <div id='chart14' class='chart14'”></div>
+                <!-- <img src={{ url[3] }} alt="Avatar" class="card-im"> -->
+                <h2>3-way Hate Classification</h2>
+                <p class="content">implicit | explicit | <strong>not hate</strong></p>
+            </div> 
+        </div>
         </p>
     </details>
     <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 40px;">
         <summary>6-way Hate Classification</summary>
         <p>
         <!-- <div class="column" style="float: left; width: 60%; margin-top: 70px; margin-left: 350px;"> -->
-        <div class="column">
-        <div class="card" id="background">
-            <div id='chart5' class='chart5'”></div>
-            <!-- <img src={{ url[3] }} alt="Avatar" class="card-im"> -->
-            <!-- <h2>{{ name[3] }}</h2> -->
-            <h2>6-way Hate Classification</h2>
-            <p class="content">incitement | inferiority | irony | stereotypical | threatening | white grievance</p>
-        </div> 
+        <div class="column" style="margin-top: 10px;width: 90%;">
+            <div class="card" id="background">
+                <div id='chart15' class='chart15'”></div>
+                <!-- <img src={{ url[3] }} alt="Avatar" class="card-im"> -->
+                <!-- <h2>{{ name[3] }}</h2> -->
+                <h2>6-way Hate Classification</h2>
+                <p class="content"><strong>incitement</strong> | inferiority | irony | stereotypical | threatening | white grievance</p>
+            </div> 
+        </div>
+        <div class="column" style="margin-top: 10px;width: 90%;">
+            <div class="card" id="background">
+                <div id='chart16' class='chart16'”></div>
+                <!-- <img src={{ url[3] }} alt="Avatar" class="card-im"> -->
+                <!-- <h2>{{ name[3] }}</h2> -->
+                <h2>6-way Hate Classification</h2>
+                <p class="content">incitement | <strong>inferiority</strong> | irony | stereotypical | threatening | white grievance</p>
+            </div> 
+        </div>
+        <div class="column" style="margin-top: 10px;width: 90%;">
+            <div class="card" id="background">
+                <div id='chart17' class='chart17'”></div>
+                <!-- <img src={{ url[3] }} alt="Avatar" class="card-im"> -->
+                <!-- <h2>{{ name[3] }}</h2> -->
+                <h2>6-way Hate Classification</h2>
+                <p class="content">incitement | inferiority | <strong>irony</strong> | stereotypical | threatening | white grievance</p>
+            </div> 
+        </div>
+        <div class="column" style="margin-top: 10px;width: 90%;">
+            <div class="card" id="background">
+                <div id='chart18' class='chart18'”></div>
+                <!-- <img src={{ url[3] }} alt="Avatar" class="card-im"> -->
+                <!-- <h2>{{ name[3] }}</h2> -->
+                <h2>6-way Hate Classification</h2>
+                <p class="content">incitement | inferiority | irony | <strong>stereotypical</strong> | threatening | white grievance</p>
+            </div> 
+        </div>
+        <div class="column" style="margin-top: 10px;width: 90%;">
+            <div class="card" id="background">
+                <div id='chart19' class='chart19'”></div>
+                <!-- <img src={{ url[3] }} alt="Avatar" class="card-im"> -->
+                <!-- <h2>{{ name[3] }}</h2> -->
+                <h2>6-way Hate Classification</h2>
+                <p class="content">incitement | inferiority | irony | stereotypical | <strong>threatening</strong> | white grievance</p>
+            </div> 
+        </div>
+        <div class="column" style="margin-top: 10px;width: 90%;">
+            <div class="card" id="background">
+                <div id='chart20' class='chart20'”></div>
+                <!-- <img src={{ url[3] }} alt="Avatar" class="card-im"> -->
+                <!-- <h2>{{ name[3] }}</h2> -->
+                <h2>6-way Hate Classification</h2>
+                <p class="content">incitement | inferiority | irony | stereotypical | threatening | <strong>white grievance</strong></p>
+            </div> 
+        </div>
         </p>
     </details>
 </div>
@@ -84,11 +213,41 @@
     var graph3 = {{graphJSON[2] | safe}};
     var graph4 = {{graphJSON[3] | safe}};
     var graph5 = {{graphJSON[4] | safe}};
+    var graph6 = {{graphJSON[5] | safe}};
+    var graph7 = {{graphJSON[6] | safe}};
+    var graph8 = {{graphJSON[7] | safe}};
+    var graph9 = {{graphJSON[8] | safe}};
+    var graph10 = {{graphJSON[9] | safe}};
+    var graph11 = {{graphJSON[10] | safe}};
+    var graph12 = {{graphJSON[11] | safe}};
+    var graph13 = {{graphJSON[12] | safe}};
+    var graph14 = {{graphJSON[13] | safe}};
+    var graph15 = {{graphJSON[14] | safe}};
+    var graph16 = {{graphJSON[15] | safe}};
+    var graph17 = {{graphJSON[16] | safe}};
+    var graph18 = {{graphJSON[17] | safe}};
+    var graph19 = {{graphJSON[18] | safe}};
+    var graph20 = {{graphJSON[19] | safe}};
     Plotly.plot('chart1',graph1,{});
     Plotly.plot('chart2',graph2,{});
     Plotly.plot('chart3',graph3,{});
     Plotly.plot('chart4',graph4,{});
     Plotly.plot('chart5',graph5,{});
+    Plotly.plot('chart6',graph6,{});
+    Plotly.plot('chart7',graph7,{});
+    Plotly.plot('chart8',graph8,{});
+    Plotly.plot('chart9',graph9,{});
+    Plotly.plot('chart10',graph10,{});
+    Plotly.plot('chart11',graph11,{});
+    Plotly.plot('chart12',graph12,{});
+    Plotly.plot('chart13',graph13,{});
+    Plotly.plot('chart14',graph14,{});
+    Plotly.plot('chart15',graph15,{});
+    Plotly.plot('chart16',graph16,{});
+    Plotly.plot('chart17',graph17,{});
+    Plotly.plot('chart18',graph18,{});
+    Plotly.plot('chart19',graph19,{});
+    Plotly.plot('chart20',graph20,{});
 </script>
 <script src="{{ url_for('static', filename='js/accordion.js') }}"></script>
 {% endblock %}
