--- a/templates/home.html
+++ b/templates/home.html
@@ -66,7 +66,7 @@
         <div class="row align-items-center flex-wrap-reverse h-100">
           <div class="col-md-6 py-5 wow fadeInLeft">
             <h1 class="mb-4">TwiDash</h1>
-            <p class="text-lg text-grey mb-5">Fine-grained Analysis and Diffusion Visualization Tool</p>
+            <p class="text-lg text-grey mb-5">Fine-grained Content Analysis and Diffusion Visualization Tool</p>
             <a href="{{ url_for('view_dispersion')}}" class="btn btn-primary btn-split">View Realtime Dispersion Network <div class="fab"><span class="mai-play"></span></div></a>
           </div>
           <div class="col-md-6 py-5 wow zoomIn">
@@ -244,7 +244,7 @@
           <div class="card-blog">
             <div class="header">
               <div class="post-thumb">
-                <img src="{{ url_for('static', filename='assets/img/blog/blog-1.jpg') }}" alt="">
+                <img src="{{ url_for('static', filename='images/diffusion_network.png') }}" alt="">
               </div>
             </div>
             <div class="body">
@@ -257,7 +257,7 @@
           <div class="card-blog">
             <div class="header">
               <div class="post-thumb">
-                <img src="{{ url_for('static', filename='assets/img/blog/blog-2.jpg') }}" alt="">
+                <img src="{{ url_for('static', filename='images/input_text.jpeg') }}" alt="">
               </div>
             </div>
             <div class="body">
@@ -270,7 +270,7 @@
           <div class="card-blog">
             <div class="header">
               <div class="post-thumb">
-                <img src="{{ url_for('static', filename='assets/img/blog/blog-3.jpg') }}" alt="">
+                <img src="{{ url_for('static', filename='images/bar_pie.png') }}" alt="">
               </div>
             </div>
             <div class="body">
